[package]
name = "urlshortener"
version = "4.2.0"
edition = "2024"
authors = ["Victor Polevoy <maintainer@vpolevoy.com>"]
description = "A very simple url shortener client library"
readme = "README.md"
license = "MIT"
keywords = ["url", "short", "shortener", "link"]
repository = "https://github.com/iddm/urlshortener-rs"
documentation = "https://docs.rs/urlshortener"

[dependencies]
url = "2"

[dependencies.reqwest]
version = "0.13"
default-features = false
features = ["json", "http2", "stream", "blocking", "rustls"]
optional = true

[features]
default = ["client"]
client = ["reqwest"]

[[example]]
name = "via_all_providers"
required-features = ["client"]

[[example]]
name = "via_auth_provider"
required-features = ["client"]

[[example]]
name = "via_single_provider"
required-features = ["client"]

[[example]]
name = "via_kutt_custom_host_provider"
required-features = ["client"]
